# Agentic-AI

./: .gitignore  Pov_agents.py  README.md  pyproject.toml  test.py
Agno/: agent_team.py  agent_with_tool.py  basic.py  debugging.py  fastapi_agent.py  session_storage.py  system_prompt.py  test.srt  test_frontend.html  user_prompt.py
Agno/MCp/: mcp_tool.py  multimcp_tool.py
Agno/Memory/: inbuilt_memory.py  mongo_memory.py
Agno/Models/: Openai_chat.py  anthropic_chat.py  aws_chat.py  cohere_chat.py  gemini_chat.py  groq_chat.py  huggingface_chat.py  nvidia_chat.py  openai_like.py  openrouter_chat.py
Agno/Teams/: hackernews_team.py
Agno/Tools/: all_mighty_tool.py  aws_lambdatool.py  confluence_tool.py  crawl_4ai_tool.py  csv_tool.py  fal_tool.py  own_tools.py  python_tool.py  shell_tool.py  slack_tools.py  sql_tool.py  video_caption_tool.py  web_search.py  zoom_agent.py
Agno/agents/: agent_run.py  audio_agent.py  audio_input_output.py  audio_response.py  custom_gmail_tools.py  gmail_agent.py  image_agent.py  image_generation_agent.py  playground_testing.py  playgrpound_testing.py  reasoning_agent.py  research_agent.py  structured_output.py  video_agent.py  yt_agent.py
Basic_openai/: 1-basic.py  2-structured_0utput.py  3-using_tools.py  4-retrieval.py  Kb.json  openai_streaming_examples.py
Composio_tools/: caleder_agent.py  gmail_tools.py  slack_agent.py  starter.py
Openai_Agents/basics/: Handoffs.py  first.py  function_calls.py  quickstar.py
Openai_Agents/init/: basic.py  output_type.py  running_agent.py
Openai_vision/: langchain_openrouter.py  langchain_vision.py  openai_openrouter_sdk.py  openai_sdk.py  openrouter_vision_reusable.py  operouter_vision.py
PandaAGI/: test.py
Pipedream/: agno_pipedream_oauth.py
Sarvam/: speech_to_text.py  speech_to_text_translate.py  text_to_speech.py  translate.py
Web Agent/: basic.py
kroolo-agents/: README.md
kroolo-agents/backend/: auth.py  calendar_agent.py  database.py  main.py
kroolo-agents/frontend/: app.py
tmp/lancedb/recipes.lance/_transactions/: 0-92885db9-2daf-471a-8129-a13bb40b7ea5.txn  1-cff46fe2-5fa1-4dc3-9126-4dc8d3a97310.txn
tmp/lancedb/recipes.lance/_versions/: 1.manifest  2.manifest
tmp/lancedb/recipes.lance/data/: f2d296af-81f5-49a1-849f-e88c8067bf87.lance
