[project]
name = "Agentic-AI"
version = "0.1.0"
description = "Agentic AI project managed with Poetry"
authors = [{ name = "Abhishek Sharma", email = "2001abhishek17@gmail.com" }]
requires-python = ">=3.11,<=3.13"
readme = "README.md"
dependencies = [
    "openai>=1.61.0,<2",
    "langchain-openai",
    "python-dotenv>=1.0.1,<2",
    "langchain-community",
    "browser-use",
    "langchain",
    "playwright>=1.50.0,<2",
    "gradio>=5.15.0,<6",
    "langchain-ollama>=0.2.3,<0.3",
    "langchain-mistralai>=0.2.6,<0.3",
    "json-repair>=0.35.0,<0.36",
    "pyperclip>=1.9.0,<2",
    "openai-agents>=0.0.3,<0.0.4",
    "wikipedia>=1.4.0,<2",
    "agno>=1.2.6,<2",
    "duckduckgo-search>=7.5.5,<8",
    "pypdf>=5.4.0,<6",
    "lancedb>=0.21.2,<0.22",
    "tantivy>=0.22.2,<0.23",
    "yfinance==0.2.28",
    "exa-py>=1.10.0,<2",
    "pyaudio>=0.2.14,<0.3",
    "google-genai>=1.9.0,<2",
    "youtube-transcript-api>=1.0.3,<2",
    "pymongo>=4.12.0,<5",
    "anthropic>=0.49.0,<0.50",
    "newspaper4k>=0.9.3.1",
    "lxml-html-clean>=0.4.2",
    "tavily-python>=0.6.0",
]

[tool.hatch.build.targets.sdist]
include = ["../*"]

[tool.hatch.build.targets.wheel]
include = ["../*"]

[tool.hatch.build.targets.wheel.sources]
"../*" = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
